Fix size on mobile
Changed the width from percent to px to prevent squishing on mobile.

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    width: 25%;
+    width: 400px;
     box-shadow: 5px 5px 5px 5px black;
     border-radius: 25px;
     background-color: rgb(196, 194, 194);
